Trying to fix scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ html, body {
   height: 100%;
   min-height: 560px;
   min-width: 480px;
-  height: 100vh;
   overflow: hidden;
 }
 
@@ -99,12 +98,11 @@ hr {
 }
 
 #content {
-  position: absolute;
-  max-width: 100% !important;
-  min-width: 372px;
+  position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  min-width: 372px;
   z-index: 98;
   color: #eee;
   text-align: center;
